spring-boot-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  spring-boot-db-deployment
  namespace: spring-application
  labels:
    app:  spring-boot-db-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-db 
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  spring-boot-db
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name:  mysql-db
        image:  hungvu034/springdb:latest
        resources:
          requests:
            cpu: 100m
            memory: 1000Mi
          limits:
            cpu: 100m
            memory: 2000Mi
        ports:
        - containerPort:  3306
        volumeMounts:
        - name: mysql-db
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-db
          persistentVolumeClaim: 
            claimName: mysql-data
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-db-service
  namespace: spring-application
spec:
  selector:
    app: spring-boot-db
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: spring-db
    protocol: TCP
    port: 3306
    targetPort: 3306
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
