spring-boot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  spring-boot-deployment
  namespace: spring-application
  labels:
    app:  spring-boot-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-back-end
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  spring-boot-back-end
    spec:
      containers:
      - name:  spring-boot
        image:  hungvu034/spring-boot:v2
        resources:
          requests:
            cpu: 100m
            memory: 1000Mi
          limits:
            cpu: 100m
            memory: 1000Mi
        ports:
        - containerPort:  8080
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: spring-application
spec:
  selector:
    app: spring-boot-back-end
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http 
    protocol: TCP
    port: 8080
    targetPort: 8080
