vue-js-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vue-js-client-deployment
  namespace: spring-application
  labels:
    app:  vue-js-client-deployment
spec:
  selector:
    matchLabels:
      app: vue-js-client
  replicas: 3
  template:
    metadata:
      labels:
        app:  vue-js-client
    spec:
      containers:
      - name:  vue-app
        image:  hungvu034/vue-app:latest
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 80
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: vue-js-client-service
  namespace: spring-application
spec:
  selector:
    app: vue-js-client
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
